--- a/tdb-main_accf_15.css
+++ b/tdb-main_accf_15.css
@@ -13,7 +13,7 @@ body .tdb-spsh-title {
   font-size: 1.429em;
   font-weight: 500;
   line-height: 1.2;
-  color: #1d2327;
+  color: black;
 }
 .tdb-s-btn {
   display: inline-flex;
